# overwatch

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml  requirements.dev.txt  requirements.target.txt  skills-lock.json
.claude/: settings.json
.claude/agents/: README.md  product-owner.md
.claude/commands/: groom-v1.md  work-v1.md
.claude/skills/bus-stage-conventions/: SKILL.md
.claude/workflows/: README.md  adr-fanout.js  cross-component-review.js  env-verification-sweep.js  model-convert-benchmark.js
.github/ISSUE_TEMPLATE/: chore.md  config.yml  feature-slice.md  spike.md
.github/workflows/: ci.yml  release.yml
configs/: animals.yaml  default.yaml
docs/: ARCHITECTURE.md  DEMO_RTSP.md  GLOSSARY.md  GROOMING.md  HARDWARE.md  RECORDING_FORMAT.md  RELEASING.md  ROADMAP_V1_V2.md  SOFTWARE_STACK.md  STORAGE.md
docs/DECISIONS/: 0000-template.md  0001-message-bus-choice.md  0002-zed-deepstream-integration.md  0003-ondemand-reid-trigger.md  0004-versioning-and-release.md  0005-reid-model-licensing.md  0006-multi-camera-capture-split.md  0007-licensing-posture.md  0008-dashboard-streaming-surface.md  0009-detector-model-yolov11.md
docs/research/: 2026-06-04-tier3-detection-dataset-feasibility.md  2026-06-07-immobility-threshold-validation.md  2026-06-07-person-animal-detection-dataset-feasibility.md  2026-06-07-yolo11-trt85-viability.md
docs/runbooks/: jetson-provisioning.md
models/: README.md
scripts/: README.md
scripts/dev/: _python.ps1  bench_depth_fusion.py  bench_feed_tap.py  build_farm_dataset.py  bus_tap.py  check_env.ps1  check_env.py  format.ps1  gate_metrics.py  lint.ps1  setup_backlog.ps1  spike_yolo11_export.py  spike_yolo11_probe.py  train_yolov8_farm.py
src/overwatch/: __init__.py  app.py  healthcheck.py  mono_e2e.py  observability.py  orchestrator.py
tests/: conftest.py
tests/device/: test_depth_fusion_device.py  test_device_placeholder.py  test_reid_dispatch_device.py  test_zeromq_tcp.py
tests/unit/: _schema_equal.py  conftest.py  factories.py  test_app.py  test_capture_config.py  test_capture_service.py  test_check_env.py  test_config.py  test_dashboard_feeds.py  test_dashboard_server.py  test_dashboard_view.py  test_deepstream_pipeline.py  test_deepstream_probes.py  test_depth_fusion.py  test_events.py  test_fixtures.py  test_frame_slot.py  test_gate_metrics.py  test_health.py  test_healthcheck.py  test_imports.py  test_labels.py  test_liveness.py  test_mono_alerts.py  test_nvinfer_yolo11_spike_config.py  test_observability.py  test_orchestrator.py  test_recording.py  test_reid_gallery.py  test_retention.py  test_rtsp_source.py  test_serialization.py  test_slack.py  test_spike_yolo11_export.py  test_sqlite_store.py  test_throttle.py  test_zeromq_bus.py  test_zone_counting.py  test_zones.py
(+81 files in other folders)
