[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "overwatch"
# Version is single-sourced from src/overwatch/__init__.py (__version__) via
# [tool.setuptools.dynamic] below — bump it in ONE place. Scheme: CalVer
# (YYYY.MINOR.PATCH); see docs/RELEASING.md and docs/DECISIONS/0004.
dynamic = ["version"]
description = "Edge-AI farm monitoring (animals: counting, vision-only ID, health) on Jetson Xavier NX"
readme = "README.md"
# Target is Jetson / Python 3.8 — keep all code 3.8-compatible.
requires-python = ">=3.8"
license = { text = "AGPL-3.0-or-later" }   # ADR-0007: non-commercial / AGPL / public

# Host-installable runtime deps only. Target-only wheels (pyzed, the Jetson
# torch wheel, DeepStream bindings) are NOT here — they go in
# requirements.target.txt and are installed exclusively by scripts/target/.
dependencies = [
    "numpy",
    "pyyaml",
    "pydantic>=2",
    "pyzmq",
    "python-dotenv",
    # Operator-dashboard backend (#124, ADR-0008): serves the prebuilt SPA dist/
    # + a JSON data API. Pure-Python, so they install on the Jetson too. Pinned
    # BELOW the releases that drop Python 3.8 support (FastAPI 0.116 / uvicorn
    # 0.34) — the target runtime is 3.8.
    "fastapi>=0.110,<0.116",
    "uvicorn>=0.29,<0.34",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "pytest",
    # Host decode backend for the RTSP capture source (#31). On the Jetson the
    # system GStreamer/NVDEC-enabled OpenCV provides cv2 instead (see
    # requirements.target.txt) — do NOT pip-install this wheel on-device.
    "opencv-python",
    # Starlette/FastAPI TestClient transport — dashboard backend tests (#124).
    "httpx",
    # ONNX inspection for the host-side detector-export guard
    # (scripts/dev/spike_yolo11_export.py + its tests, YOLOv11 spike). Host/dev
    # only — the Jetson builds engines from ONNX via TensorRT, not this wheel.
    "onnx",
]

[project.scripts]
overwatch = "overwatch.app:main"

[tool.setuptools.dynamic]
version = { attr = "overwatch.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py38"
line-length = 100
src = ["src", "tests"]

[tool.mypy]
# NOTE: the 3.8 *syntax* gate is ruff (target-version = "py38"). Modern mypy on
# the host (Python 3.12) refuses python_version < 3.10, so we don't pin it here;
# mypy uses the running interpreter. On-device (Python 3.8) mypy targets 3.8.
ignore_missing_imports = true   # pyzed / pyds / tensorrt are target-only
files = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Default host run excludes target-only tests:
#   pytest -m "not device and not gpu and not zed"
